--- a/project/gateway/Dockerfile
+++ b/project/gateway/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Copy requirements.txt and install (even though it's empty or minimal)
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir paho-mqtt
 
 # Copy the gateway script into the container
 COPY gateway.py .
