working the problem

--- a/project/gateway/Dockerfile
+++ b/project/gateway/Dockerfile
@@ -12,9 +12,10 @@ COPY supervisord.conf /etc/supervisor/conf.d/
 # Copy requirements.txt and install (even though it's empty or minimal)
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir paho-mqtt mqtt-exporter==1.7.1 supervisor
+RUN pip install --no-cache-dir paho-mqtt mqtt-exporter==1.5.0 supervisor
 
 # Copy the gateway script into the container
 
 # Run the gateway script
-CMD ["supervisord", "-n", "-c", "/etc/supervisor/conf.d/supervisord.conf"]  # Supervisor launches both gateway & exporter
+CMD ["supervisord", "-n", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+
