--- a/project/gateway/supervisord.conf
+++ b/project/gateway/supervisord.conf
@@ -8,7 +8,7 @@ stderr_logfile=/dev/stderr
 autorestart=true
 
 [program:mqtt-exporter]
-command=mqtt-exporter --config /app/mqtt-exporter-config.yml
+command=mqtt-exporter --config=/app/mqtt-exporter-config.yml
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 autorestart=true
